--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 body{
   background-color: black;
+  
 }
 
 #game-board {
@@ -13,13 +14,22 @@ body{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 30%;
+  height: 150px;
+  width: 500px;
+}
+#animated-logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 58px;
+  width: 317px;
 }
 
 body button {
+  font-family: 'Press Start 2P', cursive;
   font-size: 20px;
-  background-color:blue;
-  color: #fff;
+  background-color: gold;
+  color:black;
   padding: 10px 20px;
   border: 0;
   box-shadow: 0;
@@ -72,6 +82,11 @@ body button {
   border: 2px solid black;
   
 }
+.ghost {
+  background-image: url('../images/ghost.gif');
+  background-size: cover;
+  border: 2px solid black;
+}
 
 .left {
   background-image: url('../images/pacman-left.gif');
@@ -88,4 +103,12 @@ body button {
   background-image: url('../images/pacman-up.gif');
   background-size: cover;
   border: 2px solid black;
+}
+#score {
+  
+  color: gold;
+  font-size: 20px;
+  padding-left: 58%;
+  font-family: 'Press Start 2P', cursive;
+  
 }
