--- a/styles/styles.css
+++ b/styles/styles.css
@@ -112,3 +112,13 @@ body button {
   font-family: 'Press Start 2P', cursive;
   
 }
+.win {
+  background-image: url('../images/win.png');
+  background-size: cover;
+  height: 250px;
+  width: 800px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
